Change to postgresql

--- a/tests/test_newdb.ipynb
+++ b/tests/test_newdb.ipynb
@@ -4,27 +4,39 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "remove!!!\n",
-      "reading from min.data\n",
-      "--->finished loading 10 minima\n",
-      "reading from ts.data\n",
-      "--->finished loading 105 transition states\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from  viewland.storage import Database\n",
-    "from viewland.utils.optim_compatibility import OptimDBConverter\n",
-    "db = Database()\n",
-    "converter = OptimDBConverter(db)\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from sqlalchemy import create_engine, and_, or_\n",
+    "from sqlalchemy.orm import sessionmaker, undefer\n",
+    "from sqlalchemy import Column, Integer, Float, PickleType, String, Boolean\n",
+    "from sqlalchemy import ForeignKey\n",
+    "from sqlalchemy.orm import relationship, deferred\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.schema import Index\n",
+    "DATABASE_URI = 'postgresql+psycopg2://temp:12345678@localhost:5432/books'\n",
+    "Base = declarative_base()\n",
     "\n",
-    "# Read in data from min.data ts.data\n",
-    "converter.convert_no_coords()"
+    "class Database(object):\n",
+    "    engine = None\n",
+    "    session = None\n",
+    "    connection = None\n",
+    "    accuracy = 1e-3\n",
+    "    compareMinima = None\n",
+    "\n",
+    "    def __init__(self, db=\"temp:12345678@localhost:5432/books\", accuracy=1e-3,\n",
+    "                 connect_string='postgresql+psycopg2://%s',\n",
+    "                 compareMinima=None, createdb=True):\n",
+    "        self.accuracy = accuracy\n",
+    "        self.compareMinima = compareMinima\n",
+    "\n",
+    "        self.engine = create_engine(DATABASE_URI)\n",
+    "        Base.metadata.create_all(self.engine)\n",
+    "\n",
+    "        # set up the session which will manage the frontend connection to the database\n",
+    "        Session = sessionmaker(bind=self.engine)\n",
+    "        self.session = Session()"
    ]
   },
   {
@@ -33,20 +45,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<Minimum(id='1', energy='78.94084142614602'>,\n",
-       " <Minimum(id='2', energy='78.94506582597724'>]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reading from min.data\n",
+      "--->finished loading 10 minima\n",
+      "reading from ts.data\n",
+      "--->finished loading 105 transition states\n"
+     ]
     }
    ],
    "source": [
-    "from viewland.storage import Minimum\n",
-    "converter.db.session.query(Minimum).limit(2).all()"
+    "from viewland.utils.optim_compatibility import OptimDBConverter\n",
+    "db = Database()\n",
+    "converter = OptimDBConverter(db)\n",
+    "converter.convert_no_coords()"
    ]
   },
   {
@@ -58,7 +71,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remove!!!\n",
       "reading from min.data\n",
       "--->finished loading 10 minima\n",
       "reading from ts.data\n",
@@ -77,7 +89,7 @@
     }
    ],
    "source": [
-    "%run gen_tree.py "
+    "%run gen_tree.py"
    ]
   }
  ],
