refactor database.py

--- a/tests/test_newdb.ipynb
+++ b/tests/test_newdb.ipynb
@@ -2,45 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "from sqlalchemy import create_engine, and_, or_\n",
-    "from sqlalchemy.orm import sessionmaker, undefer\n",
-    "from sqlalchemy import Column, Integer, Float, PickleType, String, Boolean\n",
-    "from sqlalchemy import ForeignKey\n",
-    "from sqlalchemy.orm import relationship, deferred\n",
-    "from sqlalchemy.ext.declarative import declarative_base\n",
-    "from sqlalchemy.schema import Index\n",
-    "DATABASE_URI = 'postgresql+psycopg2://temp:12345678@localhost:5432/books'\n",
-    "Base = declarative_base()\n",
-    "\n",
-    "class Database(object):\n",
-    "    engine = None\n",
-    "    session = None\n",
-    "    connection = None\n",
-    "    accuracy = 1e-3\n",
-    "    compareMinima = None\n",
-    "\n",
-    "    def __init__(self, db=\"temp:12345678@localhost:5432/books\", accuracy=1e-3,\n",
-    "                 connect_string='postgresql+psycopg2://%s',\n",
-    "                 compareMinima=None, createdb=True):\n",
-    "        self.accuracy = accuracy\n",
-    "        self.compareMinima = compareMinima\n",
-    "\n",
-    "        self.engine = create_engine(DATABASE_URI)\n",
-    "        Base.metadata.create_all(self.engine)\n",
-    "\n",
-    "        # set up the session which will manage the frontend connection to the database\n",
-    "        Session = sessionmaker(bind=self.engine)\n",
-    "        self.session = Session()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -57,6 +18,7 @@
    ],
    "source": [
     "from viewland.utils.optim_compatibility import OptimDBConverter\n",
+    "from viewland.storage import Database\n",
     "db = Database()\n",
     "converter = OptimDBConverter(db)\n",
     "converter.convert_no_coords()"
@@ -64,7 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<TransitionState(id='1', energy='78.95919553911568'>\n",
+      "\n",
+      "[<TransitionState(id='1', energy='78.95919553911568'>, <TransitionState(id='2', energy='79.22858670598885'>, <TransitionState(id='19', energy='79.17911398236147'>, <TransitionState(id='21', energy='79.8814997384143'>, <TransitionState(id='22', energy='79.55835107771506'>, <TransitionState(id='34', energy='82.10273224448869'>, <TransitionState(id='85', energy='79.51266971276966'>, <TransitionState(id='86', energy='81.36276381579836'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(db.get_transition_state_between_minima(db.get_minimum_from_id(1), db.get_minimum_from_id(2)))\n",
+    "print()\n",
+    "print(db.get_transition_states_connected_to_minimum(db.get_minimum_from_id(1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +74,13 @@
    "source": [
     "%run gen_tree.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
