--- a/tests/test_newdb.ipynb
+++ b/tests/test_newdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,10 +17,10 @@
     }
    ],
    "source": [
-    "from viewland.utils.optim_compatibility import OptimDBConverter\n",
+    "from viewland.utils.converter import Converter\n",
     "from viewland.storage import Database\n",
     "db = Database()\n",
-    "converter = OptimDBConverter(db)\n",
+    "converter = Converter(db)\n",
     "converter.convert_no_coords()"
    ]
   },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
