Fix bug in connection

--- a/tests/test_newdb.ipynb
+++ b/tests/test_newdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,8 @@
     "from viewland.storage import Database\n",
     "db = Database()\n",
     "converter = Converter(db)\n",
-    "converter.convert_no_coords()"
+    "converter.convert_no_coords()\n",
+    "db.close()"
    ]
   },
   {
@@ -42,12 +43,13 @@
    "source": [
     "print(db.get_transition_state_between_minima(db.get_minimum_from_id(1), db.get_minimum_from_id(2)))\n",
     "print()\n",
-    "print(db.get_transition_states_connected_to_minimum(db.get_minimum_from_id(1)))"
+    "print(db.get_transition_states_connected_to_minimum(db.get_minimum_from_id(1)))\n",
+    "db.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
