--- a/tests/test_newdb.ipynb
+++ b/tests/test_newdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,27 @@
    "source": [
     "from viewland.utils.converter import Converter\n",
     "from viewland.storage import Database\n",
-    "db = Database()\n",
+    "\n",
+    "import os\n",
+    "os.environ['POSTGRES_USER'] = 'temp'\n",
+    "os.environ['POSTGRES_PASSWORD'] = '12345678'\n",
+    "os.environ['POSTGRES_DB'] ='data'\n",
+    "os.environ['POSTGRES_PORT'] = '5432'\n",
+    "os.environ['POSTGRES_CONTAINER_NAME'] = 'localhost'\n",
+    "\n",
+    "def create_connect_string():\n",
+    "    import os\n",
+    "    user=os.environ.get('POSTGRES_USER')\n",
+    "    password=os.environ.get('POSTGRES_PASSWORD')\n",
+    "    database_name=os.environ.get('POSTGRES_DB')\n",
+    "    port=os.environ.get('POSTGRES_PORT')\n",
+    "    container_name = os.environ.get('POSTGRES_CONTAINER_NAME')\n",
+    "\n",
+    "    return 'postgresql+psycopg2://{}:{}@{}:{}/{}'.format(user,\n",
+    "    password, container_name,port, database_name)\n",
+    "\n",
+    "# db = Database('postgresql+psycopg2://temp:12345678@localhost:5432/data')\n",
+    "db = Database(create_connect_string())\n",
     "converter = Converter(db)\n",
     "converter.convert_no_coords()\n",
     "db.close()"
@@ -27,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
