--- a/tests/test_newdb.ipynb
+++ b/tests/test_newdb.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Incomplete information provided. Use system environment variables instead.\n",
+      "The connection string is:  postgresql+psycopg2://temp:12345678@localhost:5432/data\n",
+      "Number of TS =  0\n",
       "reading from min.data\n",
       "--->finished loading 10 minima\n",
       "reading from ts.data\n",
@@ -17,29 +20,20 @@
     }
    ],
    "source": [
-    "from viewland.utils.converter import Converter\n",
+    "from viewland.utils import Converter\n",
     "from viewland.storage import Database\n",
+    "from viewland.storage.database import create_connect_string\n",
     "\n",
     "import os\n",
     "os.environ['POSTGRES_USER'] = 'temp'\n",
     "os.environ['POSTGRES_PASSWORD'] = '12345678'\n",
     "os.environ['POSTGRES_DB'] ='data'\n",
     "os.environ['POSTGRES_PORT'] = '5432'\n",
-    "os.environ['POSTGRES_CONTAINER_NAME'] = 'localhost'\n",
-    "\n",
-    "def create_connect_string():\n",
-    "    import os\n",
-    "    user=os.environ.get('POSTGRES_USER')\n",
-    "    password=os.environ.get('POSTGRES_PASSWORD')\n",
-    "    database_name=os.environ.get('POSTGRES_DB')\n",
-    "    port=os.environ.get('POSTGRES_PORT')\n",
-    "    container_name = os.environ.get('POSTGRES_CONTAINER_NAME')\n",
-    "\n",
-    "    return 'postgresql+psycopg2://{}:{}@{}:{}/{}'.format(user,\n",
-    "    password, container_name,port, database_name)\n",
+    "os.environ['POSTGRES_HOST'] = 'localhost'\n",
     "\n",
     "# db = Database('postgresql+psycopg2://temp:12345678@localhost:5432/data')\n",
     "db = Database(create_connect_string())\n",
+    "print('Number of TS = ',db.number_of_transition_states())\n",
     "converter = Converter(db)\n",
     "converter.convert_no_coords()\n",
     "db.close()"
@@ -124,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
