test: create integration test

--- a/tests/test_newdb.ipynb
+++ b/tests/test_newdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -63,17 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Incomplete information provided. Use system environment variables instead.\n",
+      "The connection string is:  postgresql+psycopg2://temp:12345678@localhost:5432/data\n",
       "reading from min.data\n",
       "--->finished loading 10 minima\n",
       "reading from ts.data\n",
-      "--->finished loading 105 transition states\n"
+      "--->finished loading 105 transition states\n",
+      "10 15\n"
      ]
     },
     {
